# Argus

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  utils.py
backend/app/models/: schemas.py
backend/app/routes/: feedback.py  property.py
backend/app/services/: feedback.py  google_maps.py  pois.py  segmentation.py  supabase.py  vision.py
backend/tests/: test_endpoints.py
docs/superpowers/plans/: 2026-03-25-argus-brandkit.md  2026-04-16-3d-model-generation.md  2026-04-16-ai-feedback.md  2026-04-16-image-collection-type-classification.md
docs/superpowers/specs/: 2026-03-25-argus-brandkit-design.md  2026-04-16-3d-model-pipeline-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AIInsights.tsx  AddressSearch.tsx  ArgusLogo.tsx  JsonViewer.tsx  MapPanel.tsx  PropertyHero.tsx  PropertySidebar.tsx
frontend/src/components/ui/: card.tsx  confidence-bar.tsx  data-badge.tsx  insight-chip.tsx  search-bar.tsx  section-header.tsx  stat-callout.tsx  theme-toggle.tsx
frontend/src/lib/: api.ts  types.ts
notebooks/: sam3_playground.ipynb
