[project]
name = "argus-backend"
version = "0.1.0"
description = "Argus property intelligence API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "supabase>=2.0.0",
    "openai>=1.60.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=1.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
